[package]
name = "tcpcommclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] } # Last version without prebuild binary
serde_json = { version = "1.0"}
async-trait = { version = "0.1"}